✨ BottomNavigationBar와 설정 화면 UI를 구현했어요!
현재 네비게이션 시 세탁 여부(isAvailable)의 상태가 저장되지 않는 문제가 있어요. 해결 후 다음 커밋에 반영하도록 할게요

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="Theme.Sejong2WasherTimer.Splash" parent="Theme.SplashScreen">
+
+
+    </style>
+
     <style name="Theme.Sejong2WasherTimer" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
+
